Finish new addon api